--- a/learning_modules/byui.css
+++ b/learning_modules/byui.css
@@ -23,6 +23,16 @@ img {
 }
 
 footer {
-    background-color: steelblue;
+    background-color : steelblue;
     color : white;
+}
+
+.main-para {
+    font-size : 1.5em;
+    line-height : 1.5em;
+}
+
+#active {
+    background-color: white;
+    color: steelblue;
 }
