Did challenge assignment

--- a/learning_modules/byui.css
+++ b/learning_modules/byui.css
@@ -1,6 +1,6 @@
-body {
+/* body {
     text-align: center;
-    /* color:brown; */
+    /* color:brown;
 }
 
 nav {
@@ -35,4 +35,4 @@ footer {
 #active {
     background-color: white;
     color: steelblue;
-}
+} */
