--- a/learning_modules/styles/styles.css
+++ b/learning_modules/styles/styles.css
@@ -1,55 +1,28 @@
-img {
-    width: 80%;
-}
-
-p {
-    width: 80%;
-}
-
-a {
-    font-size: 1.5em;
-}
-
-img {
-    width: 80%;
+footer {
+    background-color: steelblue;
+    color: white;
+    padding: 25px;
 }
 
 h1 {
-    text-align: center;
+    margin: 50px 0;
 }
 
-nav, footer {
-    text-align: center;
+nav {
     background-color: steelblue;
+    padding: 25px;
+    margin: 50px auto;
+}
+
+a {
     color: white;
-    padding: 10px;
+    padding: 25px;
+}
+
+body {
+    margin: 0;
 }
 
 img {
-    width: 80%;
-    display: block;
-    margin: 0 auto;
+    border: 4px solid steelblue;
 }
-
-main p {
-    width: 80%;
-    /* aligns box */
-    margin: 50px auto;
-    /* aligns content in box */
-    text-align: center;
-}
-
-/* Descendant Selector */
-footer p {
-    font-size: 20px;
-    margin: 20px auto;
-}
-
-a:hover {
-    background-color: white;
-    color: steelblue;
-}
-
-/* * {
-    border: 2px solid blue;
-} */
