--- a/positionstyles.css
+++ b/positionstyles.css
@@ -30,130 +30,190 @@
   background-color: blue; 
   grid-column: 1 / 3;
 } 
+
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
   display: grid;
 }
 .red2 {
+  z-index: 1;
   width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  height: 100px;
+  background-color: red;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 } 
-.green2 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-} 
-.yellow2 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
-.blue2 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
-/* Activity 3 styles */ 
-.content3 {
-  /* This is the parent of the activity 3 boxes. */
-}
-.red3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
-.green3 {
+.green2 {
+  z-index: 2;
   width: 100px; 
   height: 100px; 
   background-color: green;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-top: 50px;
+  margin-left: 50px;
 } 
-.yellow3 {
+.yellow2 {
+  z-index: 3;
   width: 100px; 
   height: 100px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-top: 100px;
+  margin-left: 100px;
+} 
+.blue2 {
+  z-index: 4;
+  width: 100px; 
+  height: 100px; 
+  background-color: blue;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin-top: 150px;
+  margin-left: 150px;
+}
+
+/* Activity 3 styles */ 
+.content3 {
+  /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+.red3 {
+  width: 100%; 
+  height: 100px; 
+  background-color: red; 
+  grid-column: 1 / 12;
+  grid-row: 1 / 2;
+} 
+.green3 {
+  width: 100%; 
+  height: 100%; 
+  background-color: green;
+  grid-column: 1 / 6;
+  grid-row: 2 / 4;
+} 
+.yellow3 {
+  width: 100%; 
+  height: 100%; 
+  background-color: gold;
+  grid-column: 7 / 12;
+  grid-row: 2 / 4;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
-  background-color: blue; 
-} 
+  background-color: blue;
+  grid-column: 1 / 12;
+  grid-row: 4 / 5; 
+}
+
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 100%; 
+  height: 100%; 
+  background-color: red;
+  grid-column: 1 / 3;
+  grid-row: 1 / 4;
+
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 100%; 
+  height: 100%; 
+  background-color: green;
+  grid-column: 3 / 5;
+  grid-row: 1 / 2;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 100%; 
+  height: 100%; 
+  background-color: gold;
+  grid-column: 3 / 5;
+  grid-row: 2 / 3;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
-} 
+  width: 100%; 
+  height: 100%; 
+  background-color: blue;
+  grid-column: 3 / 5;
+  grid-row: 3 / 4;
+}
+
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
 }
-.red5 { 
-  width: 100px; 
+.red5 {
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
-.green5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-
+.green5 {
+  width: 200px; 
+  height: 200px; 
+  background-color: green;
+  float: left;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: auto; 
   background-color: gold; 
-
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
+
 /* Activity 6 styles */ 
 .content6 {
+  height: 400px;
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  z-index: 1;
+  width: auto; 
+  height: auto; 
+  background-color: red;
+  grid-column: 1 / 5;
+  grid-row: 1 / 3
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  z-index: 3;
+  width: auto; 
+  height: auto; 
+  background-color: green;
+  grid-column: 1 / 3;
+  grid-row: 5 / 7;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  z-index: 3;
+  width: auto; 
+  height: auto; 
+  background-color: gold;
+  grid-column: 5 / 7;
+  grid-row: 3 / 7;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  z-index: 2;
+  width: auto; 
+  height: auto; 
+  background-color: blue;
+  grid-column : 2 / 6;
+  grid-row: 2 / 6;
 } 
 
 
