--- a/Test/testing.css
+++ b/Test/testing.css
@@ -9,8 +9,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    justify-content: center;
-    align-content: center;
+    /* rows */
+    justify-items: center;
+    /* columns */ 
+    align-items: center;
   }
   .content2 {
     width: 80%;
@@ -19,6 +21,12 @@
     display: grid;
     grid-template-columns: 150px 150px;
     grid-template-rows: 150px 150px;
+    justify-items: center;
+    align-items: center;
+    /* rows */
+    justify-content: center;
+    /* columns */
+    align-content: center;
   }
   .content3 {
     width: 80%;
@@ -27,6 +35,10 @@
     display: grid;
     grid-template-columns: 150px 150px;
     grid-template-rows: 150px 150px;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
   }
   
   .red {
