--- a/swimmers-guide/styles/site-plan.css
+++ b/swimmers-guide/styles/site-plan.css
@@ -1,18 +1,18 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Caveat&family=Fjalla+One&family=Josefin+Sans&family=Ubuntu+Condensed&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #274C77;
+  --secondary-color: #E7ECEF;
+  --accent1-color: #6096BA;
+  --accent2-color: #8B8C89;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: 'Caveat', sans-serif, Arial;
+  --paragraph-font: 'Acme', Arial, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
