--- a/challenges/challenge4/chall4.css
+++ b/challenges/challenge4/chall4.css
@@ -12,63 +12,58 @@ body {
     grid-column: 3 / 4;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    border-radius: 20px;
+    border-radius: 30px;
     background-color: white;
+    text-align: center;
 }
 
 img {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
-    justify-self: center;
+    width: 100%;
+    border-radius: 20px 20px 0px 0px;
 }
 
 h4 {
     grid-column: 1 / 4;
     grid-row: 2 / 3;
-    justify-self: center;
+    color: rgb(60, 79, 143);
+    margin: 20px 0px 0px 0px;
 }
 
-h2 {
+h1 {
     grid-column: 1 / 4;
     grid-row: 3 / 4;
-    justify-self: center;
+    display: inline;
+    margin: 0px;
 }
 
-.main-text {
+.contentGrid p {
     grid-column: 1 / 4;
     grid-row: 4 / 5;
-    justify-self: center;
+    color: gray;
+    font-weight: bold;
+    margin: 25px;
 }
 
-#bottomHeading1 {
-    justify-self: center;
-    grid-column: 1 / 2;
-    grid-row: 5 / 6
-}
-#bottomP1 {
-    justify-self: center;
-    grid-column: 1 / 2;
-    grid-row: 6 / 7;
-}
-
-#bottomHeading2 {
-    justify-self: center;
-    grid-column: 2 / 3;
-    grid-row: 5 / 6;
-}
-#bottomP2 {
-    justify-self: center;
-    grid-column: 2 / 3;
-    grid-row: 6 / 7;
+.grid2 {
+    grid-column: 1 / 4;
+    grid-template-columns: 1fr 1fr 1fr;
+    display: grid;
+    text-align: center;
+    background-color: rgb(60, 79, 143);
+    border-radius: 0px 0px 20px 20px;
+    color: white;
 }
 
-#bottomHeading3 {
-    justify-self: center;
-    grid-column: 3 / 4;
-    grid-row: 5 / 6;
+.grid2 p {
+    font-size: smaller;
+    color: white;
 }
-#bottomP3 {
-    justify-self: center;
-    grid-column: 3 / 4;
-    grid-row: 6 / 7;
+
+#left {
+    border-right: solid 2px gray;
+}
+#right {
+    border-left: solid 2px gray;
 }
