--- a/wwr/styles/faq-style.css
+++ b/wwr/styles/faq-style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Francois+One&family=Montserrat&display=swap');
-/* --heading-font: "Francois One";
---paragraph-font: Montserrat; */
-
 #content {
     max-width: 1600px;
     margin: 0 auto;
+}
+/* HEADER START */
+/* h1, h2, h3, h4 {
+    font-family: Montserrat, Arial, sans-serif;
 }
 
 header {
@@ -26,7 +27,7 @@ nav {
     justify-content: space-around;
 }
 nav a:hover {
-    background-color: #090749;
+    background-color: #090749; */
 }
 nav a {
     color: white;
@@ -64,98 +65,12 @@ nav a {
 .button-box {
     text-align: center;
 }
-
-.home-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+.home-title {
+    color: #DD7E11;
+    margin-top: 10px;
+    font-size: 2em;
 }
-main section {
-    text-align: center;
-}
-main section img {
-    box-sizing: border-box;
-}
-main .icon {
-    width: 80px;
-}
-/* Card Content */
-.card-img, .mountains {
-    width: 100%;
-}
-#rivers-card {
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-}
-#camping-card {
-    grid-column: 5 / 7;
-    grid-row: 2 / 3;
-}
-#rapids-card {
-    grid-column: 8 / 10;
-    grid-row: 2 / 3;
-}
-#background {
-    height: 725px;
-    background-color: #DD7E11;
-    grid-column: 1 / 11;
-    grid-row: 4 / 9;
-}
-.mountains {
-    grid-column: 2 / 7;
-    grid-row: 5 / 8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.msg {
-    background-color: #b16815;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6 / 10;
-    grid-row: 6 / 7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.msg h2 {
-    color: white;
-}
-.msg p {
-    color: black;
-    font-size: .8em;
-    padding-bottom: 15px;
-}
-
-h1, h2, h3, h4 {
-    font-family: Montserrat, Arial, sans-serif;
-}
-h2 {
-    margin: 0;
-}
-
-.icon {
-    padding-top: 10px;
-}
-
-body {
-    background-color: white;
-    font-family: "Francois One", Arial, sans-serif;
-    font-size: 22px;
-    padding: 0;
-    margin: 0;
-}
-
-.card-img {
-    border: 10px solid #090749;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1)
-}
-#rivers-card, #camping-card, #rapids-card {
-    margin: 200px 0;
-}
-
-/* links */
-.book, .join {
+.book {
     background-color: #41748a;
     color: white;
     text-decoration: none;
@@ -165,43 +80,19 @@ body {
     /* Rounds edges */
     border-radius: 5px;
 }
-.book:hover, .join:hover {
+.book:hover {
     background-color: #090749;
 }
 
-footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #41748a;
-    color: black;
-    padding: 25px 50px;
-    margin-top: 200px;
+body {
+    background-color: white;
+    font-family: "Francois One", Arial, sans-serif;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
 }
-footer p {
-    font-size: 1.2em;
-}
-footer p a:hover {
-    text-decoration: underline;
-}
-footer a {
-    color: #090749;
-    text-decoration: none;
-}
-footer a:hover {
-    color: white;
-}
-footer .social {
-    padding-top: 15px;
-}
+/* HEADER END */
 
-.home-title {
-    color: #DD7E11;
-    margin-top: 10px;
-    font-size: 2em;
-}
-
-/* SECOND PAGE */
 /* MAIN (home-grid) START */
 .head-bar {
     background-color: #41748a;
@@ -308,45 +199,3 @@ footer .social {
     padding-top: 15px;
 }
 /* FOOTER END */
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-    }
-}
