--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,7 +6,7 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #2b8ace;
+  --primary-color: white;
   --secondary-color: #41748a;
   --accent1-color: #090749;
   --accent2-color: #DD7E11;
