--- a/swimmers-guide/styles/styles.css
+++ b/swimmers-guide/styles/styles.css
@@ -350,7 +350,7 @@ ul li a:hover {
 .workouts-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr 1fr 2fr 1fr 2fr 2fr;
 }
 #workouts-main-head-bar {
     align-self: center;
@@ -365,6 +365,73 @@ ul li a:hover {
     grid-row: 2 / 13;
     background-color: #6096BA;
     z-index: -1;
+}
+
+#first-head-bar {
+    grid-column: 4 / 8;
+    grid-row: 2 / 3;
+    background-color: #274C77;
+    margin-top: 50px;
+    align-self: center;
+    box-shadow: 5px 5px 10px black;
+}
+#first-head-bar h3 {
+    color: white;
+    font-size: x-large;
+}
+#workout1-paragraph {
+    grid-column: 5 / 7;
+    grid-row: 3 / 4;
+    color: white;
+    font-size: large;
+}
+
+#second-head-bar {
+    grid-column: 4 / 8;
+    grid-row: 4 / 5;
+    background-color: #274C77;
+    margin-top: 50px;
+    align-self: center;
+    box-shadow: 5px 5px 10px black;
+}
+#second-head-bar h3 {
+    color: white;
+    font-size: x-large;
+}
+#workout2-paragraph {
+    grid-column: 4 / 8;
+    grid-row: 5 / 6;
+    color: white;
+    font-size: large;
+    justify-self: center;
+}
+
+#third-head-bar {
+    grid-column: 5 / 7;
+    grid-row: 6 / 7;
+    background-color: #274C77;
+    margin-top: 50px;
+    align-self: center;
+    box-shadow: 5px 5px 10px black;
+}
+#third-head-bar h3 {
+    color: white;
+    font-size: x-large;
+}
+#workout3-paragraph {
+    grid-column: 4 / 8;
+    grid-row: 7 / 8;
+    color: white;
+    font-size: large;
+    justify-self: center;
+}
+#workout-img {
+    grid-column: 4 / 8;
+    grid-row: 7 / 9;
+    justify-self: center;
+    align-self: center;
+    margin-top: 100px;
+    box-shadow: 5px 5px 10px black;
 }
 /* END WORKOUTS PAGE */
 
