fixed workouts page

--- a/swimmers-guide/styles/styles.css
+++ b/swimmers-guide/styles/styles.css
@@ -228,8 +228,7 @@ ul li a:hover {
 .strokes-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-    grid-template-rows: 1fr 2fr 1fr 2fr 1fr 2fr;
+    grid-template-rows: auto 2fr 1fr auto 1fr auto;
 }
 #strokes-main-head-bar {
     align-self: center;
@@ -278,6 +277,7 @@ ul li a:hover {
     margin: 20px 0 0 40px;
     color: white;
     text-align: left;
+    font-size: large;
 }
 #BU {
     grid-column: 6 / 10;
@@ -311,7 +311,7 @@ ul li a:hover {
     grid-column: 6 / 10;
     grid-row:  6 / 7;
     justify-self: center;
-    margin: 20px 0 10px 0;
+    margin: 20px 0 30px 0;
     box-shadow: 5px 5px 10px black;
 }
 
@@ -339,7 +339,7 @@ ul li a:hover {
 #BF {
     grid-column: 6 / 10;
     grid-row: 8 / 9;
-    margin: 20px 0 10px 0;
+    margin: 20px 0 30px 0;
     justify-self: center;
     box-shadow: 5px 5px 10px black;
 }
@@ -351,7 +351,7 @@ ul li a:hover {
 .workouts-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 2fr 1fr 2fr 1fr 2fr 2fr;
+    grid-template-rows: auto auto auto auto auto auto auto 3fr;
 }
 #workouts-main-head-bar {
     align-self: center;
@@ -391,7 +391,7 @@ ul li a:hover {
     grid-column: 4 / 8;
     grid-row: 4 / 5;
     background-color: #274C77;
-    margin-top: 50px;
+    margin-top: 25px;
     align-self: center;
     box-shadow: 5px 5px 10px black;
 }
@@ -411,7 +411,7 @@ ul li a:hover {
     grid-column: 5 / 7;
     grid-row: 6 / 7;
     background-color: #274C77;
-    margin-top: 50px;
+    margin-top: 25px;
     align-self: center;
     box-shadow: 5px 5px 10px black;
 }
@@ -428,10 +428,10 @@ ul li a:hover {
 }
 #workout-img {
     grid-column: 4 / 8;
-    grid-row: 7 / 9;
+    grid-row: 8 / 9;
     justify-self: center;
-    align-self: center;
-    margin-top: 100px;
+    align-self: start;
+    margin-bottom: 40px;
     box-shadow: 5px 5px 10px black;
 }
 /* END WORKOUTS PAGE */
